--- a/Index.html
+++ b/Index.html
@@ -26,11 +26,11 @@
         .description {
             font-size: 14px;
             color: gray;
-            font-weight: normal;
+            font-weight: normal.
         }
     </style>
 </head>
-<body>
+<body ontouchstart="">
     <h1>Warhammer 40k Mission Selector</h1>
     <button id="selectMission">Mission auswählen</button>
     
