--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
+            margin: 5px;
         }
 
         .mission-details {
@@ -26,59 +27,74 @@
         .description {
             font-size: 14px;
             color: gray;
-            font-weight: normal.
+            font-weight: normal;
+        }
+
+        .container {
+            display: flex;
+            justify-content: space-between;
         }
     </style>
 </head>
-<body ontouchstart="">
+<body>
     <h1>Warhammer 40k Mission Selector</h1>
-    <button id="selectMission">Mission auswählen</button>
     
+    <div class="container">
+        <button id="selectMission">Mission auswählen</button>
+        <button id="resetButton">Zurücksetzen</button>
+    </div>
+
     <!-- Bereich für die Missionsanzeige -->
     <div id="mission" class="mission-details"></div>
 
     <script>
-        document.getElementById('selectMission').addEventListener('click', function() {
-            // Arrays mit Missionen und ihren Beschreibungen
-            const primaryMissions = [
-                { name: 'Secure Objective', description: 'Erhalte Punkte, indem du bestimmte Ziele sicherst.' },
-                { name: 'Seize Ground', description: 'Kontrolliere so viel Gelände wie möglich.' },
-                { name: 'Engage on All Fronts', description: 'Teile deine Kräfte auf und dominiere verschiedene Sektoren.' },
-                { name: 'Dominate the Field', description: 'Erobere das zentrale Schlachtfeld und kontrolliere es.' },
-                { name: 'Hold the Line', description: 'Verteidige deine Aufstellungszone gegen feindliche Angriffe.' }
-            ];
-            const secondaryMissions = [
-                { name: 'Capture and Control', description: 'Erhalte Punkte für die Kontrolle von Missionszielen.' },
-                { name: 'Reconnaissance', description: 'Führe Aufklärungsmissionen durch, um Informationen zu sammeln.' },
-                { name: 'Linebreaker', description: 'Dringe in die feindliche Aufstellungszone ein und zerstöre die Verteidigung.' },
-                { name: 'First Blood', description: 'Verdiene dir Punkte, indem du die erste Einheit zerstörst.' },
-                { name: 'Kill and Capture', description: 'Zerstöre Feinde und erobere ihre Überreste.' }
-            ];
-            const gambitMissions = [
-                { name: 'Engage on Sight', description: 'Greife sofort an, sobald der Feind in Sichtweite ist.' },
-                { name: 'No Prisoners', description: 'Lass keine Überlebenden auf dem Schlachtfeld zurück.' },
-                { name: 'Last Stand', description: 'Verteidige deine Stellung bis zum letzten Mann.' },
-                { name: 'Kill Team', description: 'Eliminiere gezielt feindliche Eliteeinheiten.' },
-                { name: 'Kill Wound', description: 'Verursache so viel Schaden wie möglich und sichere den Sieg.' }
-            ];
-            const deploymentZones = [
-                { name: 'Urban', description: 'Kämpfe in dicht besiedelten städtischen Gebieten.' },
-                { name: 'Open Ground', description: 'Offene Flächen ohne Deckung erfordern präzise Taktiken.' },
-                { name: 'Ruins', description: 'Zerstörte Gebäude bieten taktische Deckung und strategische Vorteile.' },
-                { name: 'Jungle', description: 'Dichter Dschungel erschwert die Sicht und Bewegung.' },
-                { name: 'Fortification', description: 'Verteidige oder greife stark befestigte Positionen an.' }
-            ];
+        let primaryMissionGenerated = false;
+        let primaryMission = null;
 
-            // Zufällige Auswahl der Missionen
-            const randomPrimary = primaryMissions[Math.floor(Math.random() * primaryMissions.length)];
+        const primaryMissions = [
+            { name: 'Secure Objective', description: 'Erhalte Punkte, indem du bestimmte Ziele sicherst.' },
+            { name: 'Seize Ground', description: 'Kontrolliere so viel Gelände wie möglich.' },
+            { name: 'Engage on All Fronts', description: 'Teile deine Kräfte auf und dominiere verschiedene Sektoren.' },
+            { name: 'Dominate the Field', description: 'Erobere das zentrale Schlachtfeld und kontrolliere es.' },
+            { name: 'Hold the Line', description: 'Verteidige deine Aufstellungszone gegen feindliche Angriffe.' }
+        ];
+        const secondaryMissions = [
+            { name: 'Capture and Control', description: 'Erhalte Punkte für die Kontrolle von Missionszielen.' },
+            { name: 'Reconnaissance', description: 'Führe Aufklärungsmissionen durch, um Informationen zu sammeln.' },
+            { name: 'Linebreaker', description: 'Dringe in die feindliche Aufstellungszone ein und zerstöre die Verteidigung.' },
+            { name: 'First Blood', description: 'Verdiene dir Punkte, indem du die erste Einheit zerstörst.' },
+            { name: 'Kill and Capture', description: 'Zerstöre Feinde und erobere ihre Überreste.' }
+        ];
+        const gambitMissions = [
+            { name: 'Engage on Sight', description: 'Greife sofort an, sobald der Feind in Sichtweite ist.' },
+            { name: 'No Prisoners', description: 'Lass keine Überlebenden auf dem Schlachtfeld zurück.' },
+            { name: 'Last Stand', description: 'Verteidige deine Stellung bis zum letzten Mann.' },
+            { name: 'Kill Team', description: 'Eliminiere gezielt feindliche Eliteeinheiten.' },
+            { name: 'Kill Wound', description: 'Verursache so viel Schaden wie möglich und sichere den Sieg.' }
+        ];
+        const deploymentZones = [
+            { name: 'Urban', description: 'Kämpfe in dicht besiedelten städtischen Gebieten.' },
+            { name: 'Open Ground', description: 'Offene Flächen ohne Deckung erfordern präzise Taktiken.' },
+            { name: 'Ruins', description: 'Zerstörte Gebäude bieten taktische Deckung und strategische Vorteile.' },
+            { name: 'Jungle', description: 'Dichter Dschungel erschwert die Sicht und Bewegung.' },
+            { name: 'Fortification', description: 'Verteidige oder greife stark befestigte Positionen an.' }
+        ];
+
+        document.getElementById('selectMission').addEventListener('click', function() {
+            if (!primaryMissionGenerated) {
+                // Primärmission nur einmal zufällig auswählen
+                primaryMission = primaryMissions[Math.floor(Math.random() * primaryMissions.length)];
+                primaryMissionGenerated = true;
+            }
+
             const randomSecondary = secondaryMissions[Math.floor(Math.random() * secondaryMissions.length)];
             const randomGambit = gambitMissions[Math.floor(Math.random() * gambitMissions.length)];
             const randomZone = deploymentZones[Math.floor(Math.random() * deploymentZones.length)];
 
             // Anzeige der ausgewählten Missionen mit Beschreibung
             document.getElementById('mission').innerHTML = `
-                <p><strong>Primärmission:</strong> ${randomPrimary.name}</p>
-                <p class="description">${randomPrimary.description}</p>
+                <p><strong>Primärmission:</strong> ${primaryMission.name}</p>
+                <p class="description">${primaryMission.description}</p>
                 <p><strong>Sekundärmission:</strong> ${randomSecondary.name}</p>
                 <p class="description">${randomSecondary.description}</p>
                 <p><strong>Gambit:</strong> ${randomGambit.name}</p>
@@ -86,6 +102,13 @@
                 <p><strong>Einsatzzone:</strong> ${randomZone.name}</p>
                 <p class="description">${randomZone.description}</p>
             `;
+        });
+
+        document.getElementById('resetButton').addEventListener('click', function() {
+            // Primärmission zurücksetzen
+            primaryMissionGenerated = false;
+            primaryMission = null;
+            document.getElementById('mission').innerHTML = '';  // Missionsanzeige leeren
         });
     </script>
 </body>
