--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>40k Mission Selector</title>
     <style>
         body {
+            background-color: #3a3d2b; /* Dunkles Olivgrün */
+            color: white; /* Weiße Schriftfarbe */
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 50px;
@@ -16,6 +18,15 @@
             font-size: 16px;
             cursor: pointer;
             margin: 5px;
+            background-color: #4b4e3d; /* Dunkles Olivgrün für Buttons */
+            color: white; /* Weiße Schriftfarbe für Buttons */
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #5a5d4b; /* Helleres Olivgrün beim Hover */
         }
 
         .mission-details {
@@ -26,7 +37,7 @@
 
         .description {
             font-size: 14px;
-            color: gray;
+            color: lightgray; /* Hellgraue Schrift für Beschreibungen */
             font-weight: normal;
         }
 
