--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             font-size: 3em; /* Größere Schriftgröße für die Überschrift */
             color: #DAA520; /* Dunkelgoldene Schriftfarbe */
             margin-bottom: 20px; /* Abstand unter der Überschrift */
+            position: relative; /* Damit die Überschrift über dem Overlay ist */
+            z-index: 1; /* Sicherstellen, dass die Überschrift über dem Overlay ist */
         }
 
         button {
@@ -56,6 +58,8 @@
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s;
+            position: relative; /* Damit die Buttons über dem Overlay sind */
+            z-index: 1; /* Sicherstellen, dass die Buttons über dem Overlay sind */
         }
 
         button:hover {
@@ -69,6 +73,8 @@
             background-color: rgba(0, 0, 0, 0.6); /* Halbtransparenter Hintergrund für Lesbarkeit */
             padding: 15px;
             border-radius: 10px; /* Runde Ecken für das Missionsfeld */
+            position: relative; /* Damit die Missionsdetails über dem Overlay sind */
+            z-index: 1; /* Sicherstellen, dass die Missionsdetails über dem Overlay sind */
         }
 
         .description {
